packages/pug-lexer/test/errors/malformed-extend.pug
extend(data-foo='bar') I'm pretending to be a tag